syntax = "proto3";

package evm.cryptopunks.v1;

message Events {
  repeated Assign assigns = 1; // "mint"
  repeated PunkTransfer punk_transfers = 2;
  repeated PunkBought punk_boughts = 3; // "transfer" via sale
  repeated PunkOffered punk_offereds = 4;
  repeated PunkBidEntered punk_bid_entereds = 5;
  repeated PunkBidWithdrawn punk_bid_withdrawns = 6;
  repeated PunkNoLongerForSale punk_no_longer_for_sales = 7;
  // ‚ùå excludes `Transfer` since it is a duplicate event of ERC-20
}

message Assign {
  // -- transaction --
  bytes tx_hash = 1;

  // -- caller --
  optional bytes caller = 2; // call.caller (only available in Extended blocks)

  // -- log --
  bytes contract = 3; // log.address
  uint64 ordinal = 4; // log.ordinal

  // -- event --
  bytes to = 10;
  string punk_index = 11; // uint256
}

message PunkTransfer {
  // -- transaction --
  bytes tx_hash = 1;

  // -- caller --
  optional bytes caller = 2; // call.caller (only available in Extended blocks)

  // -- log --
  bytes contract = 3; // log.address
  uint64 ordinal = 4; // log.ordinal

  // -- event --
  bytes from = 10;
  bytes to = 11;
  string punk_index = 12; // uint256
}

message PunkBought {
  // -- transaction --
  bytes tx_hash = 1;

  // -- caller --
  optional bytes caller = 2; // call.caller (only available in Extended blocks)

  // -- log --
  bytes contract = 3; // log.address
  uint64 ordinal = 4; // log.ordinal

  // -- event --
  string punk_index = 10; // uint256
  optional string value = 11; // uint256 (https://github.com/pinax-network/substreams-evm-nfts/issues/1)
  bytes from_address = 12;
  bytes to_address = 13;
}

message PunkBidEntered {
  // -- transaction --
  bytes tx_hash = 1;

  // -- caller --
  optional bytes caller = 2; // call.caller (only available in Extended blocks)

  // -- log --
  bytes contract = 3; // log.address
  uint64 ordinal = 4; // log.ordinal

  // -- event --
  string punk_index = 10; // uint256
  string value = 11; // uint256
  bytes from_address = 12;
}

message PunkBidWithdrawn {
  // -- transaction --
  bytes tx_hash = 1;

  // -- caller --
  optional bytes caller = 2; // call.caller (only available in Extended blocks)

  // -- log --
  bytes contract = 3; // log.address
  uint64 ordinal = 4; // log.ordinal

  // -- event --
  string punk_index = 10; // uint256
  string value = 11; // uint256
  bytes from_address = 12;
}

message PunkNoLongerForSale {
  // -- transaction --
  bytes tx_hash = 1;

  // -- caller --
  optional bytes caller = 2; // call.caller (only available in Extended blocks)

  // -- log --
  bytes contract = 3; // log.address
  uint64 ordinal = 4; // log.ordinal

  // -- event --
  string punk_index = 10; // uint256
}

message PunkOffered {
  // -- transaction --
  bytes tx_hash = 1;

  // -- caller --
  optional bytes caller = 2; // call.caller (only available in Extended blocks)

  // -- log --
  bytes contract = 3; // log.address
  uint64 ordinal = 4; // log.ordinal

  // -- event --
  string punk_index = 10; // uint256
  string min_value = 11; // uint256
  bytes to_address = 12;
}
